<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".SingleMatch">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Scegli_dei_giocatori"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fastgameplayer1"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fastgameplayer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/fastgameplayer2"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/fastgameplayer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fastgameplayer1" />

    <Button
        android:id="@+id/fastgameplayer3"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/fastgameplayer3"
        app:layout_constraintEnd_toEndOf="@+id/fastgameplayer1"
        app:layout_constraintStart_toStartOf="@+id/fastgameplayer1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/fastgameplayer4"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:contentDescription="@string/fastgameplayer4"
        app:layout_constraintEnd_toEndOf="@+id/fastgameplayer2"
        app:layout_constraintTop_toTopOf="@+id/fastgameplayer3" />

    <Button
        android:id="@+id/startmatch"
        android:layout_width="134dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:text="@string/inizia"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fastgameplayer3" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>