<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intent.Online">

    <Button
        android:id="@+id/onlinegameplayer1"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/onlinegameplayer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ble" />

    <Button
        android:id="@+id/onlinegameplayer2"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/onlinegameplayer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onlinegameplayer1" />

    <Button
        android:id="@+id/onlinegameplayer3"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/onlinegameplayer3"
        app:layout_constraintEnd_toEndOf="@+id/onlinegameplayer1"
        app:layout_constraintStart_toStartOf="@+id/onlinegameplayer1"
        app:layout_constraintTop_toBottomOf="@+id/ble" />

    <Button
        android:id="@+id/onlinegameplayer4"
        android:layout_width="@dimen/SquaredPlayerImage"
        android:layout_height="@dimen/SquaredPlayerImage"
        android:contentDescription="@string/onlinegameplayer4"
        app:layout_constraintEnd_toEndOf="@+id/onlinegameplayer2"
        app:layout_constraintTop_toTopOf="@+id/onlinegameplayer3" />

    <Button
        android:id="@+id/ble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>